2009-06-16  Brad Taylor  <brad@getcoded.net>

	* strongwind/cache.py: Set the process group of our launched
	application so that the application and its children can be killed with
	os.killpg(proc.pid, signal.SIGKILL).  (#585983)

2009-04-07  Brian G. Merrell  <bgmerrell@novell.com>
	
	* strongwind/accessibles.py: No longer cache the log name as the
	accessible's name when Strongwind can't find a cached log name.  
	Instead, return the accessible's name property when the cached log name
	cannot be found. This fix will avoid the logName being outdate if
	an accessible changes its name.  (#577761)
	* strongwind/watchdog.py: Simply refer to the AttributeError exception 
	as AttributeError instead of exceptions.AttributeError.  Exceptions are
	provided in the built-in namespace. (#574965)

2009-02-24  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* strongwind/accessibles.py: Make 'imageSize' attrib available 
	for any sub-class of Button. Make ToggleButton inherit from Button.
	(#572995)

2009-01-15  Brian G. Merrell  <bgmerrell@novell.com>

	* strongwind/accessibles.py: Implement insertText and deleteText
	methods from IAccessibleEditableText. (#567884)

2008-12-02  Brian G. Merrell  <bgmerrell@novell.com>

	* strongwind/accessibles.py: Provide a method that can move the mouse
	to an accessible without clicking.  (#563039)

2008-10-08  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/procedurelogger.py:
	* resources/procedures.xsl:
	Keep track of how long it takes for a test to run (#555286, Brian G. Merrell)

2008-09-26  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py: Add default action logging to typeText,
	  keyCombo, and mouseClick. (#553294, Brian G. Merrell)

	* examples/gcalctool-bug-488226.py: Remove redundant logging in the
	  test script now that the logging is done in the accessible.

2008-08-14  Jonathan Tai  <jon@tgpsolutions.com>

	* strongwind/accessibles.py: Bind FontChooser dialog; add logging to